fixed spacing

--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -11,11 +11,17 @@ footer {
     text-align: center;
     background-color: #fff;
     color: #00829e;
-    float: left;
+    /* float: left; */
+    padding-top: 6px;
+    display: inline-flex;
+    justify-content: center;
     margin-left: 5px;
 }
 
 .copyright {
+    padding-top: 2px;
     color: #fff;
     float: right;
+    display: flex;
+    justify-content: flex-end;
 }
